--- a/app/assets/css/styles.css
+++ b/app/assets/css/styles.css
@@ -490,7 +490,7 @@
 	background-position:70% 90%;
 }
 .pic2 {
-	background-image:url(../../assets/images/amaz.jpg);
+	background-image:url(../../assets/images/amaz.jpeg);
 	background-position:90% 100%;
 }
 .pic3{
