--- a/app/sites/partials/main.html
+++ b/app/sites/partials/main.html
@@ -1,14 +1,67 @@
-<section id="main">
-<div class="wrapper" style="width:95%; margin:0 auto;height:100%; margin-top:50px">
-  <div class="flexslider">
-    <ul class="slides">
-<!--       <li><img ng-src="{{slide.image}}"></li> -->
-      <li><img class="pic1"></li>
-      <li><img class="pic2"></li>
-      <li><img class="pic3"></li>
-    </ul>
-  </div>
-</div>
+<div class="module row">
+
+<section class="polaroid grp">
+  <a class="polaroid__link" href="/how-to-do/beach-waves/">
+    <img class="polaroid__media img1">
+		<div class="polaroid__content">
+		  <div class="is-centred">
+        	<p>lovely girl waiting for spring :)</p>
+		  </div>	
+		</div>
+	</a>
+	<header class="polaroid__header">
+	  <h4 class="polaroid__heading">"Ugi"</h4>
+		<span class="dash">-</span>
+		<p>April 2016</p>
+	</header>
 </section>
+
+<section class="polaroid grp">
+  <a class="polaroid__link" href="/how-to-do/beach-waves/">
+    <img class="polaroid__media img2">
+		<div class="polaroid__content">
+		  <div class="is-centred">
+        	<p>What a beautiful day</p>
+		  </div>	
+		</div>
+	</a>
+	<header class="polaroid__header">
+	  <h4 class="polaroid__heading">"Jenn + Jeff"</h4>
+		<span class="dash">-</span>
+		<p>March 2016</p>
+	</header>
+</section>
+
+<section class="polaroid grp">
+  <a class="polaroid__link" href="/how-to-do/beach-waves/">
+    <img class="polaroid__media img3">
+		<div class="polaroid__content">
+		  <div class="is-centred">
+        		<p>Hi There, welcome to Paris!</p>
+			</div>	
+		</div>
+	</a>
+	<header class="polaroid__header">
+	  <h4 class="polaroid__heading">"Travel"</h4>
+		<span class="dash">-</span>
+		<p>Paris 2015</p>
+	</header>
+</section>
+
+
+<section class="polaroid grp">
+  <a class="polaroid__link" href="/how-to-do/beach-waves/">
+    <img class="polaroid__media img5">
+		<div class="polaroid__content">
+		</div>
+	</a>
+	<header class="polaroid__header">
+	  <h4 class="polaroid__heading">"Interior"</h4>
+		<span class="dash">-</span>
+		<p>Quebec 2015</p>
+	</header>
+</section>
+
+</div>
 
 
