--- a/app/sites/partials/main.html
+++ b/app/sites/partials/main.html
@@ -1,7 +1,7 @@
 <div class="module row">
 
 <section class="polaroid grp">
-  <a class="polaroid__link">
+  <a class="polaroid__link" ng-click="ctrl.gotoCoff()">
     <img class="polaroid__media img1">
 		<div class="polaroid__content">
 		  <div class="is-centred">
