--- a/app/sites/partials/main.html
+++ b/app/sites/partials/main.html
@@ -17,7 +17,7 @@
 </section>
 
 <section class="polaroid grp">
-  <a class="polaroid__link">
+  <a class="polaroid__link" ng-click="ctrl.gotovinyl()">
     <img class="polaroid__media img2">
 		<div class="polaroid__content">
 		  <div class="is-centred">
